--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,33 @@
-.env
-*.json
+# ---- Python ----
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
 instance/
+*.db
+.env
+credentials.json
 uploads/
 processed/
 result/
+
+# ---- Tests & Coverage ----
+.pytest_cache/
+.coverage
+htmlcov/
+
+# ---- Flutter / Dart ----
+frontend/.dart_tool/
+frontend/.flutter-plugins
+frontend/.flutter-plugins-dependencies
+frontend/.packages
+frontend/.pub-cache/
+frontend/build/
+frontend/ios/Pods/
+frontend/ios/.symlinks/
+frontend/ios/Flutter/Flutter.framework
+frontend/ios/Flutter/Flutter.podspec
+frontend/ios/ServiceDefinitions.json
+
+# ---- VSCode ----
+.vscode/
