--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,10 @@ jobs:
   backend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
@@ -22,42 +21,46 @@ jobs:
         run: |
           cd backend
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r ../requirements.txt
 
       - name: Run tests with coverage
         run: |
           cd backend
-          pytest --cov=main --cov-report=xml --cov-report=term-missing
+          pytest --cov=main --cov-report=term-missing --cov-report=html
 
       - name: Upload coverage report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: backend-coverage
-          path: backend/coverage.xml
+          name: coverage-report
+          path: backend/htmlcov
 
   frontend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.19.0"  # adapte si besoin
+          flutter-version: "3.22.0"
 
       - name: Install dependencies
         run: |
           cd frontend
           flutter pub get
 
-      - name: Run tests
+      - name: Run Flutter tests
         run: |
           cd frontend
           flutter test
 
-      - name: Build APK
+      - name: Build APK (debug)
         run: |
           cd frontend
           flutter build apk --debug
 
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-apk
+          path: frontend/build/app/outputs/flutter-apk/app-debug.apk
