--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,17 +7,13 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # ===================
-  # Backend (Flask API)
-  # ===================
   backend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
@@ -28,6 +24,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests with coverage
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}
         run: |
           cd backend
           pytest --cov=main --cov-report=term-missing
@@ -38,20 +36,16 @@ jobs:
           name: backend-coverage
           path: backend/htmlcov
 
-  # ===================
-  # Frontend (Flutter)
-  # ===================
   frontend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Flutter
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.25.0'   # ✅ Dart 3.8.1 inclus
-          channel: 'stable'
+          flutter-version: "3.13.0"
+          channel: stable
 
       - name: Install dependencies
         run: |
@@ -71,5 +65,5 @@ jobs:
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bookscan-app-apk
+          name: app-debug
           path: frontend/build/app/outputs/flutter-apk/app-debug.apk
